# freeport

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: auto-rebuild.yml  build-arch.yml  deploy-site.yml  watch-upstream.yml
.tracking/: seen.txt
distros/arch/: freeport.gpg
distros/arch/freeport-hook/: PKGBUILD  freeport-check  freeport-check.hook
distros/arch/systemd/: PKGBUILD
distros/arch/systemd/patches/: 0001-revert-birthdate-userdb.patch
distros/arch/xdg-desktop-portal/patches/: 0001-remove-parental-controls-portal.patch
docs/plans/: 2026-03-25-pacman-repo-via-github-releases.md
site/: data.json  index.html
site/styles/: blocks.css  compositions.css  exceptions.css  index.css  reset.css  tokens.css  utilities.css
tools/freeport/: Cargo.toml
tools/freeport/src/: main.rs
