[package]
name = "freeport"
version = "0.1.0"
edition = "2024"
description = "CLI tool for managing freeport patch sets and builds"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
toml = "0.8"
anyhow = "1"
